services/kubia-svc-with-affinity.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service-with-affinity
spec:
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
  sessionAffinity: ClientIP
